# rust-terminal-fun

./: Cargo.toml  README.md  repos.json
devoxx-data/: all_talks.json  talk.json  talks.txt
src/: main.rs
src/devoxx/: mod.rs  model.rs
src/docker/: mod.rs
src/github/: mod.rs
src/ui/: app.rs  mod.rs  repos_screen.rs  screen.rs
src/ui/util/: event.rs  mod.rs
