[package]
name = "rust-web"
version = "0.1.0"
authors = ["Paul Watson <paul.watson@pdwtech.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.18"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
serde_derive = "1.0.94"
hyperlocal = "0.6.0"
hyper = "0.12.31"
futures = "0.1.28"
tokio-core = "0.1.17"
termion = "1.5.3"
tui = "0.6.2"
failure = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5.1", features = ["serde"] }


[dev-dependencies]
stderrlog = "0.4"
rand = "0.6"
structopt = "0.2"